--- a/index.html
+++ b/index.html
@@ -41,22 +41,37 @@
 	<div id="form" class="container">
 		<div class="row">
 
-			<div class=" col-xs-offset-1 col-xs-4">	
-				<input type="text" id="searchTerm" placeholder="Gif Search" required>
-			</div>
+			<form>
 
-			<div class=" col-xs-3">
-				<button type="submit" class="button btn-2 btn-2c" id="submitButton">Add</button>
-			</div>
+				<div class=" col-xs-offset-1 col-xs-4">	
+					<input type="text" id="searchInput" placeholder="Gif Search" required>
+				</div>
+
+				<div class=" col-xs-3">
+					<button type="submit" class="formButton button btn-2 btn-2c" id="submitButton">Add</button>
+				</div>
+
+			</form>
 			
 			<div class=" col-xs-3">
-				<button class="button btn-2 btn-2c" id="clearGifButton">Clear Gif</button>
+				<button class="formButton button btn-2 btn-2c" id="clearGifButton">Clear Buttons</button>
 			</div>
+
 
 		</div>
 	</div> <!--end form-->
+
+	<div class="container">
+		
+		<div class="row">
+			<div class="col-xs-12">
+				<p id="message"></div>
+		</div>
+	</div>
+
+	</div> <!--end buttonsDiv-->
 	
-	<div id="buttonsDiv" class="container">
+	<div class="container">
 		
 		<div class="row">
 			<div class="col-xs-12">
