--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 
 			<form>
 
-				<div class=" col-xs-offset-1 col-xs-4">	
+				<div class="col-xs-5 col-sm-offset-1 col-sm-4">	
 					<input type="text" id="searchInput" placeholder="Gif Search" required>
 				</div>
 
-				<div class=" col-xs-3">
-					<button type="submit" class="formButton button btn-2 btn-2c" id="submitButton">Add</button>
+				<div class="col-xs-3">
+					<button type="submit" class="gifFormButton button btn-2 btn-2c" id="submitButton">Add</button>
 				</div>
 
 			</form>
 			
-			<div class=" col-xs-3">
-				<button class="formButton button btn-2 btn-2c" id="clearGifButton">Clear Buttons</button>
+			<div class=" col-xs-4 col-sm-3">
+				<button class="gifFormButton button btn-2 btn-2c" id="clearGifButton">Clear All</button>
 			</div>
 
 
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<div id="gifsSection" class="row">
 			<div class="col-xs-12">
 				<div id="gifs"></div>
 			</div>
