--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<form>
 
 				<div class="col-xs-5 col-sm-offset-1 col-sm-4">	
-					<input type="text" id="searchInput" placeholder="Gif Search" required>
+					<input type="text" id="searchInput" placeholder="Gif Search">
 				</div>
 
 				<div class="col-xs-3">
