--- a/index.html
+++ b/index.html
@@ -22,80 +22,75 @@
 
 <body>
 
-	<div id="header" class="container">
-
-		<div class="row">
-			<div class="col-xs-12 ">
-				<h1>Fun with Gifs</h1>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-xs-12">
-				<h3>Click a button below to see related gifs or create a new button.</h3>
-			</div>
-		</div>
-
-	</div> <!--end header-->
-
-	<div id="form" class="container">
-		<div class="row">
-
-			<form>
-
-				<div class="col-xs-5 col-sm-offset-1 col-sm-4">	
-					<input type="text" id="searchInput" placeholder="Gif Search">
-				</div>
-
-				<div class="col-xs-3">
-					<button type="submit" class="gifFormButton button btn-2 btn-2c" id="submitButton">Add</button>
-				</div>
-
-			</form>
-			
-			<div class=" col-xs-4 col-sm-3">
-				<button class="gifFormButton button btn-2 btn-2c" id="clearGifButton">Clear All</button>
-			</div>
-
-
-		</div>
-	</div> <!--end form-->
-
 	<div class="container">
-		
+
+		<div id="header">
+
+			<div class="row">
+				<div class="col-xs-12 ">
+					<h1>Fun with Gifs</h1>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-xs-12">
+					<h3>Click a button below to see related gifs or create a new button.</h3>
+				</div>
+			</div>
+
+		</div> <!--end header-->
+
+		<div id="form">
+			<div class="row">
+
+				<form>
+
+					<div class="col-xs-5 col-sm-offset-1 col-sm-4">	
+						<input type="text" id="searchInput" placeholder="Gif Search">
+					</div>
+
+					<div class="col-xs-3">
+						<button type="submit" class="gifFormButton button btn-2 btn-2c" id="submitButton">Add</button>
+					</div>
+
+				</form>
+				
+				<div class=" col-xs-4 col-sm-3">
+					<button class="gifFormButton button btn-2 btn-2c" id="clearGifButton">Clear All</button>
+				</div>
+
+
+			</div>
+		</div> <!--end form-->
+			
 		<div class="row">
 			<div class="col-xs-12">
 				<p id="message"></div>
 		</div>
-	</div>
 
-	</div> <!--end buttonsDiv-->
-	
-	<div class="container">
-		
 		<div class="row">
 			<div class="col-xs-12">
 				<div id="buttonsDiv"></div>
 			</div>
 		</div>
 
-	</div> <!--end buttonsDiv-->
+		<div id="gifsDiv">
 
-	<div id="gifsDiv" class="container">
-
-		<div class="row">
-			<div class="col-xs-12">
-				<h3 id="playOrFreeze">Click a gif to play or stop.</h3>
+			<div class="row">
+				<div class="col-xs-12">
+					<h3 id="playOrFreeze">Click a gif to play or stop.</h3>
+				</div>
 			</div>
-		</div>
 
-		<div id="gifsSection" class="row">
-			<div class="col-xs-12">
-				<div id="gifs"></div>
+			<div id="gifsSection" class="row">
+				<div class="col-xs-12">
+					<div id="gifs"></div>
+				</div>
 			</div>
-		</div>
 
-	</div> <!--end gifsDiv-->
+		</div> <!--end gifsDiv-->
+
+	</div> <!--end container-->
 
 	<footer>
 		<p>&copy; 2017 Maria Wong</p>
